plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.9.0'
    id 'me.champeau.jmh' version "0.7.1"
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.jetbrains.kotlin:kotlin-test'
}

test {
    useJUnitPlatform()
}

kotlin {
    jvmToolchain(8)
}

compileJava {
    options.compilerArgs << '--enable-preview' << '--add-modules' << 'jdk.incubator.vector'
}

compileJmhJava {
    options.compilerArgs << '--enable-preview' << '--add-modules' << 'jdk.incubator.vector'
}

jmhRunBytecodeGenerator {
    jvmArgs.addAll([ '--enable-preview', '--add-modules', 'jdk.incubator.vector' ])
}

jmh {
    warmupIterations = 2
    iterations = 2
    fork = 2
    benchmarkMode = ["avgt", "ss"]
    timeUnit = "ms"
    jvm = '/usr/lib/jvm/temurin-21-jdk-amd64/bin/java'
    jvmArgsPrepend = [ '--enable-preview', '--add-modules', 'jdk.incubator.vector' ]
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}